# Payroll-Management-System

./: .gitignore  Cargo.toml  Makefile.toml  README.md  diesel.toml
api-docs/: openapi.yaml  scalar.html  swagger.html
docs/: docs.json  introduction.mdx  openapi.yaml  package.json
docs/api-reference/payroll-automation/: get-payroll-run-status.mdx
docs/api-reference/payroll-scheduling/: create-or-update-a-payroll-schedule.mdx  get-a-companys-payroll-schedule.mdx  toggle-a-payroll-schedules-active-status.mdx
docs/api-reference/placeholders-future-features/: get-analytics-reports.mdx  manually-trigger-a-payroll-run.mdx
docs/api-reference/roles-&-configuration/: delete-a-role.mdx  get-role-by-id.mdx  update-a-role.mdx
migrations/: 0002_alter_employees_table.sql  0003_create_payroll_and_analytics_tables.sql  001_init.sql
migrations/2025-10-01-175727-0000_create_employees/: up.sql
migrations/2025-10-01-175818-0000_create_payroll_tables/: down.sql  up.sql
migrations/2025-10-01-175900-0000_create_payroll_jobs/: down.sql  up.sql
sdk/python-client/: pyproject.toml  setup.py
sdk/python-client/.openapi-generator/: FILES
sdk/python-client/docs/: CreateEmployee.md  CreateRoleRequest.md  Employee.md  EmployeesApi.md  LeavePolicy.md  LeavePolicyDeduction.md  OvertimePolicy.md  PayrollAutomationApi.md  PayrollCalculationResult.md  PlaceholdersFutureFeaturesApi.md  RoleConfiguration.md  RolesConfigurationApi.md  SalaryInfo.md
sdk/typescript-client/: api.ts  base.ts  common.ts  configuration.ts  index.ts
sdk/typescript-client/.openapi-generator/: FILES
sdk/typescript-client/docs/: CreateEmployee.md  CreateRoleRequest.md  Employee.md  EmployeesApi.md  LeavePolicy.md  LeavePolicyDeduction.md  OvertimePolicy.md  PayrollAutomationApi.md  PayrollCalculationResult.md  PlaceholdersFutureFeaturesApi.md  RoleConfiguration.md  RolesConfigurationApi.md  SalaryInfo.md
src/: db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/api/: types.rs
src/calculation/: engine.rs  types.rs
src/config/: builder.rs
src/domain/: error.rs  models.rs
src/services/: mod.rs  payroll_service.rs
src/web/: mod.rs  payroll_handler.rs  role_handler.rs  routes.rs  schedule_handler.rs
tests/: payroll_tests.rs
