[package]
name = "basics"
version = "0.1.0"
edition = "2021"

[lib]
name = "basics"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"

# Core Web Framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["full", "sync", "macros"] }

# Database & ORM
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
# sea-orm = "0.12" # Optional: Advanced ORM for complex queries

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Authentication & Security
jsonwebtoken = "9.0"
argon2 = "0.5" # Password hashing
# oauth2 = "4.0" # Optional: OAuth integration

# AI/ML Integration
# candle = "0.3" # Optional: Rust-native ML framework
# tokenizers = "0.19" # Optional: NLP tokenization
reqwest = { version = "0.11", features = ["json"] } # HTTP client for AI APIs (like OpenAI)

# Blockchain Integration
# ethers = "2.0" # Optional: Ethereum integration
# web3 = "0.19" # Optional: Web3 functionality

# Payment Processing
# stripe-rust = "0.23" # Optional: Stripe API
# paypal-rs = "0.3" # Optional: PayPal integration

# Messaging & Events
# tokio-tungstenite = "0.21" # Optional: WebSocket for real-time updates
# kafka = "0.9" # Optional: Event streaming

# Monitoring & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
dotenvy = "0.15"

# Utilities
thiserror = "1.0" # Error handling
anyhow = "1.0" # Error context
async-trait = "0.1" # Async traits
rand = "0.9.2"