[package]
name = "basics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basics"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "scheduler"
path = "src/bin/scheduler.rs"


[lib]
name = "basics"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"

# Core Web Framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["full", "sync", "macros"] }

# Database & ORM
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Authentication & Security
jsonwebtoken = "9.0"
argon2 = "0.5" 

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Monitoring & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.10"

# Configuration
config = "0.13"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
rand = "0.9.2"

# Scheduling Dependency
tokio-cron-scheduler = "0.9.4"